apply plugin: 'java'
apply plugin: 'application'

project.version = '2.1.0-dev1'

sourceCompatibility = 8
mainClassName = 'minicraft.core.Game'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

repositories {
    mavenCentral()

    maven {
        url "https://www.jabylon.org/maven/"
    }
}

dependencies {
    implementation 'org.jetbrains:annotations:22.0.0'
    implementation 'org.xbill:dns:2.0.8'
    implementation 'org.json:json:20210307'
    implementation 'com.mashape.unirest:unirest-java:1.4.9'
    implementation 'org.tinylog:tinylog-api:2.3.2'
    implementation 'org.tinylog:tinylog-impl:2.3.2'
}

buildscript {
    repositories {
        gradlePluginPortal()
    }
    dependencies {
        classpath 'gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0'
    }
}
apply plugin: 'com.github.johnrengelman.shadow'

shadowJar {
    archivesBaseName = 'minicraft_plus'
    archiveClassifier.set('')

    manifest {
        attributes(
                'Main-Class': mainClassName,
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'SplashScreen-Image': "Minicraft_Splash_Screen_3.png")
    }
}
